zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__ctrl_click_on_floating_pin_button_toggles_pin.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: "format!(\"{}\", snapshot_after)"
---
00 (C): ┌ Pane #1 ──────────────────────────────────────────────────────────────────────────────────────────────── ace-aardvark ┐
01 (C): │                                                                                                                       │
02 (C): │                                                                                                                       │
03 (C): │                                                                                                                       │
04 (C): │                                                                                                                       │
05 (C): │                             ┌ Pane #2 ───────────────────────── apt-anteater | PIN [+] ┐                              │
06 (C): │                             │Pin toggle test                                           │                              │
07 (C): │                             │                                                          │                              │
08 (C): │                             │                                                          │                              │
09 (C): │                             │                                                          │                              │
10 (C): │                             │                                                          │                              │
11 (C): │                             │                                                          │                              │
12 (C): │                             │                                                          │                              │
13 (C): │                             │                                                          │                              │
14 (C): │                             └──────────────────────────────────────────────────────────┘                              │
15 (C): │                                                                                                                       │
16 (C): │                                                                                                                       │
17 (C): │                                                                                                                       │
18 (C): │                                                                                                                       │
19 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
