zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__ctrl_scroll_down_on_inactive_tiled_pane_decreases_active_tiled_pane_size.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: "format!(\"{}\", snapshot_after)"
---
00 (C): ┌ Pane #1 ───────────────────────────────────────── ace-aardvark ┐┌ Pane #2 ───────────────────────────── apt-anteater ┐
01 (C): │Left pane                                                       ││Right pane                                          │
02 (C): │                                                                ││                                                    │
03 (C): │                                                                ││                                                    │
04 (C): │                                                                ││                                                    │
05 (C): │                                                                ││                                                    │
06 (C): │                                                                ││                                                    │
07 (C): │                                                                ││                                                    │
08 (C): │                                                                ││                                                    │
09 (C): │                                                                ││                                                    │
10 (C): │                                                                ││                                                    │
11 (C): │                                                                ││                                                    │
12 (C): │                                                                ││                                                    │
13 (C): │                                                                ││                                                    │
14 (C): │                                                                ││                                                    │
15 (C): │                                                                ││                                                    │
16 (C): │                                                                ││                                                    │
17 (C): │                                                                ││                                                    │
18 (C): │                                                                ││                                                    │
19 (C): └────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘
